Update README with build instructions and features